--- a/templates/todo.html
+++ b/templates/todo.html
@@ -7,6 +7,7 @@
         </div>
         <ul>
            <li><a href="{{ url_for('list_users') }}">Liste des Usagers</a></li>
+           <li><a href="{{ url_for('list_tasklists') }}">Listes de tâches</a></li>
         </ul>
     {% else %}
         <div class="page-header">
