Fin de la fonctionalité pour les Listes de Tâches.

--- a/templates/list_tasklists.html
+++ b/templates/list_tasklists.html
@@ -5,17 +5,30 @@
         <h1>Listes de tâches</h1>
     </div>
     <p>
-        {% if task_lists %}
+        {% if tasklists %}
         <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>Non de la liste</th>
+                    <th>Créé par</th>
+                    <th>Créé le</th>
+                    <th class="text-center">Modifier</th>
+                    <th class="text-center">Supprimer</th>
                 </tr>
             </thead>
             <tbody>
-                {% for task_list in task_lists %}
+                {% for tasklist in tasklists %}
                     <tr>
-                        <td>{{ task_list['list_name'] }}</td>
+                        <td><a href="{{ url_for('show_tasklist', list_id=tasklist['list_id']) }}">
+                            {{ tasklist['list_name'] }}</a></td>
+                        <td>{{ tasklist['audit_crt_user'] }}</td>
+                        <td>{{ tasklist['audit_crt_ts'] }}</td>
+                        <td class="text-center"><a href="{{ url_for('upd_tasklist', list_id=tasklist['list_id']) }}"
+                            class="btn btn-primary btn-xs" data-title="Modifier">
+                            <span class="glyphicon glyphicon-pencil"></span></a></td>
+                        <td class="text-center"><a href="{{ url_for('del_tasklist', list_id=tasklist['list_id']) }}"
+                            class="btn btn-danger btn-xs" data-title="Supprimer">
+                            <span class="glyphicon glyphicon-trash"></span></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
