Début de la fonctionalité pour les étiquettes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         <li><a href="{{ url_for('index') }}">Acceuil</a></li>
         {% if session['user_email'] %}
           <li><a href="{{ url_for('list_tasklists') }}">Listes</a></li>
+          <li><a href="{{ url_for('list_tags') }}">Étiquettes</a></li>
           <li><a href="{{ url_for('list_users') }}">Usagers</a></li>
           <li><a href="{{ url_for('logout') }}">Déconnecter</a></li>
         {% else %}
