--- a/templates/todo.html
+++ b/templates/todo.html
@@ -8,6 +8,7 @@
         <ul>
            <li><a href="{{ url_for('list_users') }}">Liste des Usagers</a></li>
            <li><a href="{{ url_for('list_tasklists') }}">Listes de tâches</a></li>
+           <li><a href="{{ url_for('list_tags') }}">Liste des Étiquettes</a></li>
         </ul>
     {% else %}
         <div class="page-header">
